# muster

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  muster.yml  rustfmt.toml
.github/workflows/: ci.yml
docs/: agent-protocol.md
examples/: muster.yml  projects.yml
src/: constants.rs  error.rs  lib.rs  main.rs
src/adapter/: cli.rs  hooks.rs  mod.rs  notifier.rs  path.rs  process_identity.rs
src/adapter/config/: agent_sessions.rs  default_settings.yml  mod.rs  registry.rs  settings.rs  yaml.rs
src/adapter/pty/: runner.rs
src/adapter/tui/: activity.rs  activity_frame.rs  app.rs  clipboard.rs  completion_generation.rs  event.rs  form.rs  host_theme.rs  input.rs  mod.rs  pointer_shape.rs  runtime.rs  selection.rs  shutdown_generation.rs  signal.rs  spawn_generation.rs  terminal.rs  watch.rs
src/adapter/tui/app/: process_controller.rs  project_controller.rs  session_controller.rs
src/adapter/tui/widget/: agent_picker.rs  confirm.rs  empty_state.rs  form.rs  help.rs  mod.rs  overlay.rs  sidebar.rs  status_bar.rs  switcher.rs  terminal_pane.rs  theme.rs
src/adapter/tui/widget/snapshots/: muster__adapter__tui__widget__confirm__tests__renders_the_confirmation.snap  muster__adapter__tui__widget__empty_state__tests__renders_the_add_process_hint.snap  muster__adapter__tui__widget__form__tests__renders_a_form_with_an_active_field.snap  muster__adapter__tui__widget__form__tests__renders_a_path_field_with_a_dropdown.snap  muster__adapter__tui__widget__help__tests__renders_the_keymap_in_two_columns.snap  muster__adapter__tui__widget__sidebar__tests__renders_the_active_project_expanded_with_others_collapsed.snap  muster__adapter__tui__widget__status_bar__tests__a_notice_replaces_the_hints.snap  muster__adapter__tui__widget__status_bar__tests__a_project_row_shows_its_own_hints.snap  muster__adapter__tui__widget__status_bar__tests__no_alert_when_nothing_has_crashed.snap  muster__adapter__tui__widget__status_bar__tests__shows_a_crashed_alert_pinned_right.snap  muster__adapter__tui__widget__switcher__tests__a_long_list_scrolls_to_keep_the_selection_visible.snap  muster__adapter__tui__widget__switcher__tests__renders_the_empty_state.snap  muster__adapter__tui__widget__switcher__tests__renders_the_switcher_overlay.snap
src/application/: mod.rs  process_lifecycle.rs  reconciliation.rs  session_restore.rs  workspace.rs
src/domain/: agent_session.rs  mod.rs  notification.rs  project.rs  settings.rs
src/domain/config/: error.rs  mod.rs  spec.rs  workspace.rs
src/domain/port/: agent_session_store.rs  config_source.rs  config_watcher.rs  mod.rs  notifier.rs  path_completer.rs  process_runner.rs  project_registry.rs  settings_store.rs
src/domain/process/: activity.rs  agent_protocol.rs  agent_tool.rs  entity.rs  exit_intent.rs  kind.rs  mod.rs  origin.rs  restart.rs  state.rs  stop.rs
src/domain/pty/: error.rs  mod.rs  output.rs  request.rs  size.rs
src/domain/value/: cols.rs  command_line.rs  description.rs  mod.rs  pane_id.rs  process_name.rs  project_name.rs  rows.rs
