[package]
name = "muster"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
crossbeam-channel = "0.5.16"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
getset = "0.1.7"
libc = "0.2.186"
notify = "8.2.0"
nutype = { version = "0.7.0", features = ["serde"] }
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_yaml_ng = "0.10.0"
shlex = "2"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.19"
tui-input = { version = "0.14.0", default-features = false }
tui-term = "0.3.4"
typed-builder = "0.23.2"
vt100 = "0.16.2"

[dev-dependencies]
insta = "1.48.0"
