[package]
name = "muster-workspace"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
description = "A terminal workspace for running CLI agents and dev processes side by side"
license = "MIT"
repository = "https://github.com/sagoez/muster"
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "process-manager", "agents"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/examples/**",
    "/docs/muster-demo.gif",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
]

[lib]
name = "muster"
path = "src/lib.rs"

[[bin]]
name = "muster"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.2", features = ["derive"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
crossbeam-channel = "0.5.16"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
getset = "0.1.7"
humantime-serde = "1.1.1"
libc = "0.2.186"
notify = "8.2.0"
notify-rust = "4.11.7"
nutype = { version = "0.7.0", features = ["serde"] }
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_yaml_ng = "0.10.0"
shlex = "2"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.19"
tui-input = { version = "0.14.0", default-features = false }
tui-term = "0.3.4"
typed-builder = "0.23.2"
vt100 = "0.16.2"

[dev-dependencies]
insta = "1.48.0"
