[package]
name = "muster-workspace"
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
description = "A terminal workspace for running CLI agents and dev processes side by side"
license = "MIT"
repository = "https://github.com/sagoez/muster"
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "process-manager", "agents"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/examples/**",
    "/docs/muster-demo.gif",
    "/docs/agent-protocol.md",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
]

[lib]
name = "muster"
path = "src/lib.rs"

[[bin]]
name = "muster"
path = "src/main.rs"

[dependencies]
atomic-write-file = "0.3.0"
base64 = "0.22.1"
clap = { version = "4.6.2", features = ["derive"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
crossbeam-channel = "0.5.16"
crossterm = { version = "0.29.0", features = ["event-stream", "osc52"] }
directories = "6.0.0"
fake = "4.4.0"
getset = "0.1.7"
humantime-serde = "1.1.1"
libc = "0.2.186"
notify = "8.2.0"
notify-rust = "4.11.7"
nutype = { version = "0.7.0", features = ["serde"] }
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
shlex = "2"
strum = { version = "0.28.0", features = ["derive"] }
terminal-colorsaurus = "1.0.3"
thiserror = "2.0.19"
toml_edit = { version = "0.23.7", features = ["serde"] }
tui-input = { version = "0.14.0", default-features = false }
tui-term = "0.3.4"
typed-builder = "0.23.2"
unicode-width = "0.2.2"
uuid = { version = "1.18.1", features = ["v4"] }
vt100 = "0.16.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
insta = "1.48.0"
